Fri Sep 12 13:52:07 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing release libxslt-1.0.33
	* doc/*: updated and rebuilt the docs
	* doc/apibuild.py: small fixes for new tokens

Wed Sep 10 23:32:42 PDT 2003 William Brack <wbrack@mmm.com.hk>

	* transform.c: enhanced previous fix to bug #120684, using
	  excellent suggestion by Daniel
	* attributes.c: fixed bug #119583, merging attribute sets
	  from imported stylesheets.
	* tests/docs/Makefile.am tests/docs/bug-131.xml
	  tests/general/Makefile.am tests/docs/bug-131*: added tests
	  to the regression suite for bug #120684.
	  
Sat Sep  6 09:57:03 PDT 2003 William Brack <wbrack@mmm.com.hk>

	* pattern.c pattern.h imports.c: fixed bug 119946, caused by
	  incorrect creation of "extra" variables when compiling
	  templates on imported stylesheets.
	* tests/docs/Makefile.am tests/docs/bug-130.xml tests/docs/bug-130.doc
	  tests/general/Makefile.am test/docs/bug-130*: added tests
	  to the regression suite for this bug.

Wed Sep  3 15:33:40 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* tests/xmlspec/*.html: tyny change HTML -> html DOCTYPE due to
	  a libxml2 change

Tue Sep  2 18:22:46 PDT 2003 William Brack <wbrack@mmm.com.hk>

	* transform.c: fixing bug #120684 on crash caused by text between
	  apply-templates

Tue Sep  2 16:05:37 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/xsltexports.h libexslt/exsltexports.h: defined additional 
	  macros which affect exports and added mingw section

Mon Sep  1 23:02:12 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/function.c: patch from Mark Vadoc to allow compiling
	  against libxml2 without XPointer supoort.

Fri Aug 29 12:28:12 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing the bug #120971 on cdata-section-elements
	  with namespaced names reported by Steve Hay
	* tests/docs/Makefile.am tests/docs/bug-129.*
	  tests/general/Makefile.am tests/general/bug-129*: added the